Fix ingredient + step retrieval

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -33,7 +33,7 @@
      "text": [
       "Collecting en-core-web-md==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_md')\n"
      ]
@@ -91,20 +91,20 @@
     "    '''Struct holding step information'''\n",
     "\n",
     "    def __init__(self, text: str):\n",
-    "        self.text = text\n",
-    "        self.ingredients = []\n",
-    "        self.tools = []\n",
-    "        self.methods = []\n",
-    "        self.times = []\n",
+    "        self.text: str = text\n",
+    "        self.ingredients: list[tuple[Ingredient, int]] = []\n",
+    "        self.tools: list[str] = []\n",
+    "        self.methods: list[str] = []\n",
+    "        self.times: list[str] = []\n",
     "    \n",
     "class Recipe:\n",
     "    '''Struct holding recipe information'''\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.title = \"\"\n",
-    "        self.ingredients = []\n",
-    "        self.steps = []\n",
-    "        self.other = {}"
+    "        self.title: str = \"\"\n",
+    "        self.ingredients: list[Ingredient] = []\n",
+    "        self.steps: list[Step] = []\n",
+    "        self.other: dict[str, str] = {}"
    ]
   },
   {
@@ -143,14 +143,18 @@
     "        # Based on the dependency + part of speech tagging, extract necessary\n",
     "        # information.\n",
     "        doc = nlp(text)\n",
-    "        for token in doc:\n",
+    "        for (i, token) in enumerate(doc):\n",
     "\n",
     "            # If the parser didn't interpret this as an imperative sentence,\n",
     "            # correct it.\n",
     "            if token.dep_ == 'ROOT' and token.head.pos_ == 'NOUN':\n",
-    "                doc[0].dep_ = 'ROOT'\n",
-    "                token.dep_ = 'dobj'\n",
-    "                step.methods.append(doc[0].text)\n",
+    "                for j in range(i,-1,-1):\n",
+    "                    if j == 0 or \\\n",
+    "                        (j > 0 and doc[j-1].dep_ == 'punct'):\n",
+    "                        doc[j].dep_ = 'ROOT'\n",
+    "                        token.dep_ = 'dobj'\n",
+    "                        step.methods.append(doc[j].text)\n",
+    "                        break\n",
     "\n",
     "            # Perform extraction\n",
     "            dep = token.dep_\n",
@@ -182,14 +186,20 @@
     "        self.source = source\n",
     "        self.recipe = Recipe()\n",
     "        self.current_tag = HTMLTag.UNKNOWN\n",
+    "        self.current_section = HTMLTag.UNKNOWN\n",
     "        super().__init__(convert_charrefs=convert_charrefs)\n",
     "    \n",
     "    def handle_starttag(self, tag: str, attrs: list[tuple[str, str | None]]) -> None:\n",
     "        # Save the current tag\n",
     "        self.current_tag = HTMLTag.from_tag(self.source, tag, attrs)\n",
     "        match self.current_tag:\n",
+    "            case HTMLTag.INGREDIENTS_LIST:\n",
+    "                self.current_section = HTMLTag.INGREDIENTS_LIST\n",
     "            case HTMLTag.INGREDIENT:\n",
-    "                self.ingredient = Ingredient()\n",
+    "                if self.current_section == HTMLTag.INGREDIENTS_LIST:\n",
+    "                    self.ingredient = Ingredient()\n",
+    "            case HTMLTag.STEPS_LIST:\n",
+    "                self.current_section = HTMLTag.STEPS_LIST\n",
     "        return super().handle_starttag(tag, attrs)\n",
     "    \n",
     "    def handle_data(self, data: str) -> None:\n",
@@ -202,14 +212,18 @@
     "            case HTMLTag.OVERVIEW_TEXT:\n",
     "                self.recipe.other[self.label] = data.strip()\n",
     "            case HTMLTag.INGREDIENT_QUANTITY:\n",
-    "                self.ingredient.quantity = str_to_fraction(data.strip())\n",
+    "                if self.current_section == HTMLTag.INGREDIENTS_LIST:\n",
+    "                    self.ingredient.quantity = str_to_fraction(data.strip())\n",
     "            case HTMLTag.INGREDIENT_UNIT:\n",
-    "                self.ingredient.unit = data.strip()\n",
+    "                if self.current_section == HTMLTag.INGREDIENTS_LIST:\n",
+    "                    self.ingredient.unit = data.strip()\n",
     "            case HTMLTag.INGREDIENT_NAME:\n",
-    "                self.ingredient.name = data.strip()\n",
-    "                self.recipe.ingredients.append(self.ingredient)\n",
+    "                if self.current_section == HTMLTag.INGREDIENTS_LIST:\n",
+    "                    self.ingredient.name = data.strip()\n",
+    "                    self.recipe.ingredients.append(self.ingredient)\n",
     "            case HTMLTag.STEP:\n",
-    "                parse_and_add_step(data.strip(), self.recipe)\n",
+    "                if self.current_section == HTMLTag.STEPS_LIST:\n",
+    "                    parse_and_add_step(data.strip(), self.recipe)\n",
     "        return super().handle_data(data)\n",
     "\n",
     "    def handle_endtag(self, tag: str) -> None:\n",
@@ -258,47 +272,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moussaka \n",
+      "Best Gingerbread Men Cookies \n",
       "\n",
-      "Lay eggplant slices on paper towels. ['lay']\n",
-      "Sprinkle lightly with salt. ['sprinkle']\n",
-      "Let sit for 30 minutes to draw out moisture. ['sit']\n",
-      "Pat dry with paper towels. ['dry']\n",
-      "Warm olive oil in a skillet over high heat. ['warm']\n",
-      "Fry eggplant until browned, 2 to 3 minutes per side. ['fry']\n",
-      "Drain on paper towels. ['drain']\n",
-      "Set aside. ['set']\n",
-      "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt']\n",
-      "Stir in ground beef, onions, and garlic. ['stir']\n",
-      "Season with salt and black pepper. ['season']\n",
-      "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir']\n",
-      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add']\n",
-      "Pour in tomato sauce and wine. ['pour']\n",
+      "Mix flour, ginger, cinnamon, baking soda, nutmeg, and salt in large bowl. ['mix']\n",
+      "Beat butter and brown sugar in large bowl with electric mixer on medium speed until light and fluffy. ['beat']\n",
+      "Add molasses, egg, and vanilla. ['add']\n",
       "Mix well. ['mix']\n",
-      "Simmer for 20 minutes. ['simmer']\n",
-      "Allow to cool. ['allow']\n",
-      "Stir in beaten egg. ['stir']\n",
-      "Scald milk in a saucepan over medium heat. ['scald']\n",
-      "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt']\n",
-      "Whisk flour into butter until smooth. ['whisk']\n",
-      "Lower heat. ['lower']\n",
-      "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour']\n",
-      "Season béchamel sauce with salt and white pepper. ['season']\n",
+      "Gradually beat in flour mixture on low speed until well mixed. ['beat']\n",
+      "Press dough into a thick, flat disk. ['press']\n",
+      "Wrap in plastic wrap. ['wrap']\n",
+      "Refrigerate 4 hours or overnight. ['refrigerate']\n",
       "Preheat the oven to 350 degrees F (175 degrees C). ['preheat']\n",
-      "Grease a 9x13-inch baking dish. ['grease']\n",
-      "Arrange a single layer of eggplant in the prepared baking dish. ['arrange']\n",
-      "Cover eggplant with meat sauce. ['cover']\n",
-      "Sprinkle 1/2 cup Parmesan cheese on top. ['sprinkle']\n",
-      "Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top. ['cover', 'sprinkle']\n",
-      "Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. ['pour', 'sprinkle']\n",
-      "Cover with remaining cheese. ['cover']\n",
-      "Bake in the preheated oven until bubbly and browned, about 1 hour. ['bake']\n",
-      "Serve hot and enjoy!. ['serve']\n"
+      "Roll dough on a lightly floured surface to a thickness of 1/4 inch. ['roll']\n",
+      "Cut into gingerbread men shapes with a 5-inch cookie cutter. ['cut']\n",
+      "Place gingerbread men 1 inch apart on ungreased baking sheets. ['place']\n",
+      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake', 'begin']\n",
+      "Cool on baking sheets for 1 to 2 minutes. ['cool']\n",
+      "Remove to wire racks to cool completely. ['remove']\n",
+      "Decorate cooled cookies as desired. ['decorate']\n",
+      "Store cookies in airtight container up to 5 days. ['store']\n"
      ]
     }
    ],
    "source": [
-    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
     "print(recipe.title, '\\n')\n",
     "for step in recipe.steps:\n",
     "    print(step.text, step.methods)"
@@ -306,24 +303,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "season compound sauce NOUN []\n",
-      "béchamel compound sauce NOUN []\n",
-      "sauce ROOT sauce NOUN [season, béchamel, with]\n",
-      "with prep sauce NOUN [pepper]\n",
-      "salt nmod pepper NOUN [and, white]\n",
+      "meanwhile advmod beef NOUN []\n",
+      ", punct beef NOUN []\n",
+      "place compound beef NOUN []\n",
+      "ground compound beef NOUN []\n",
+      "beef ROOT beef NOUN [meanwhile, ,, place, ground, ,, garlic, in]\n",
+      ", punct beef NOUN []\n",
+      "garlic conj beef NOUN [,, oregano]\n",
+      ", punct garlic NOUN []\n",
+      "oregano conj garlic NOUN [,, powder]\n",
+      ", punct oregano NOUN []\n",
+      "garlic amod powder NOUN []\n",
+      "powder conj oregano NOUN [garlic, ,, salt]\n",
+      ", punct powder NOUN []\n",
+      "salt conj powder NOUN [,, and, pepper]\n",
+      ", punct salt NOUN []\n",
       "and cc salt NOUN []\n",
-      "white conj salt NOUN []\n",
-      "pepper pobj with ADP [salt]\n",
+      "black amod pepper NOUN []\n",
+      "pepper conj salt NOUN [black]\n",
+      "in prep beef NOUN [skillet]\n",
+      "a det skillet NOUN []\n",
+      "large amod skillet NOUN []\n",
+      "skillet pobj in ADP [a, large, over]\n",
+      "over prep skillet NOUN [heat]\n",
+      "medium amod heat NOUN []\n",
+      "heat pobj over ADP [medium]\n",
       "\n",
-      "season béchamel sauce sauce ROOT sauce\n",
-      "salt and white pepper pepper pobj with\n"
+      "meanwhile, place ground beef beef ROOT beef\n",
+      "garlic garlic conj beef\n",
+      "oregano oregano conj garlic\n",
+      "garlic powder powder conj oregano\n",
+      "salt salt conj powder\n",
+      "black pepper pepper conj salt\n",
+      "a large skillet skillet pobj in\n",
+      "medium heat heat pobj over\n"
      ]
     }
    ],
@@ -335,10 +355,11 @@
     "# text = \"sprinkle lightly with salt.\"\n",
     "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
     "# text = \"stir in ground beef, onions, and garlic\"\n",
-    "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
+    "text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
     "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
     "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
-    "text = \"season béchamel sauce with salt and white pepper\"\n",
+    "# text = \"season béchamel sauce with salt and white pepper\"\n",
+    "# text = \"serve hot and enjoy!\"\n",
     "\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
