--- a/parser.ipynb
+++ b/parser.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,32 +84,75 @@
     "                 quantity: Fraction | None = None,\n",
     "                 unit: str | None = None):\n",
     "        self.name = name\n",
+    "        '''Name of the ingredient, e.g. salt'''\n",
     "        self.quantity = quantity\n",
+    "        '''Quantity of the ingredient, e.g. 1/2'''\n",
     "        self.unit = unit\n",
+    "        '''Unit of the ingredient, e.g. tsp'''\n",
+    "\n",
+    "class IntermediateIngredient:\n",
+    "    '''Struct holding intermediate ingredient information, e.g. dough'''\n",
+    "\n",
+    "    def __init__(self, ingredients: list[Ingredient]):\n",
+    "        self.name: str | None = None\n",
+    "        '''Name of the intermediate ingredient, if assigned, e.g. dough'''\n",
+    "        self.ingredients = ingredients\n",
+    "        '''Original ingredients involved, e.g. [flour, eggs]'''\n",
+    "\n",
+    "class IngredientState:\n",
+    "    '''Struct holding the current state of ingredients at a given step'''\n",
+    "\n",
+    "    def __init__(self, remaining: list[Ingredient]):\n",
+    "        self.remaining: list[Ingredient] = remaining.copy()\n",
+    "        '''Remaining unused ingredients'''\n",
+    "        self.intermediate: list[IntermediateIngredient] = []\n",
+    "        '''Any intermediate collections of ingredients'''\n",
+    "        self.focus = -1\n",
+    "        '''Index of currently referenced intermediate ingredient'''\n",
+    "    \n",
+    "    def __init__(self, remaining: list[Ingredient],\n",
+    "                 intermediate: list[IntermediateIngredient],\n",
+    "                 focus: int):\n",
+    "        self.remaining: list[Ingredient] = remaining.copy()\n",
+    "        self.intermediate: list[IntermediateIngredient] = intermediate.copy()\n",
+    "        self.focus = focus\n",
     "\n",
     "class Step:\n",
     "    '''Struct holding step information'''\n",
     "\n",
-    "    def __init__(self, text: str):\n",
+    "    def __init__(self, text: str, init_state: IngredientState):\n",
     "        self.text: str = text\n",
-    "        self.ingredients: list[tuple[Ingredient, int]] = []\n",
+    "        '''Text associated with the step'''\n",
+    "        self.ingredients: list[Ingredient] = []\n",
+    "        '''List of ingredients used in this step'''\n",
+    "        self.state: IngredientState = init_state\n",
+    "        '''State of the ingredients at this step'''\n",
     "        self.tools: list[str] = []\n",
+    "        '''Tools mentioned in this step'''\n",
     "        self.methods: list[str] = []\n",
+    "        '''Methods mentioned in this step'''\n",
     "        self.times: list[str] = []\n",
+    "        '''Times mentioned in this step'''\n",
+    "        self.temps: list[str] = []\n",
+    "        '''Temperatures / measures of \"doneness\" mentioned in this step'''\n",
     "    \n",
     "class Recipe:\n",
     "    '''Struct holding recipe information'''\n",
     "\n",
     "    def __init__(self):\n",
     "        self.title: str = \"\"\n",
+    "        '''Title of the recipe'''\n",
     "        self.ingredients: list[Ingredient] = []\n",
+    "        '''List of ingredients used in the recipe'''\n",
     "        self.steps: list[Step] = []\n",
-    "        self.other: dict[str, str] = {}"
+    "        '''List of recipe steps'''\n",
+    "        self.other: dict[str, str] = {}\n",
+    "        '''Other miscellaneous recipe information'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +176,10 @@
     "        text = ''.join([text[0].upper(), text[1:len(text)]])\n",
     "        if not text.endswith('.'):\n",
     "            text = ''.join([text, '.'])\n",
-    "        step = Step(text)\n",
+    "        if len(recipe.steps) > 0:\n",
+    "            step: Step = Step(text, recipe.steps[-1].state)\n",
+    "        else:\n",
+    "            step: Step = Step(text, IngredientState(recipe.ingredients))\n",
     "\n",
     "        # Uncapitalize the first letter. This prevents SpaCy from reading the\n",
     "        # first word as a proper noun (imperative sentences are less common in\n",
@@ -162,7 +208,7 @@
     "                case 'ROOT':\n",
     "                    step.methods.append(token.text)\n",
     "                case 'conj':\n",
-    "                    if token.head.pos_ == 'VERB':\n",
+    "                    if token.head.text in step.methods:\n",
     "                        step.methods.append(token.text)\n",
     "\n",
     "        # Save step to recipe\n",
@@ -171,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +332,7 @@
       "Roll dough on a lightly floured surface to a thickness of 1/4 inch. ['roll']\n",
       "Cut into gingerbread men shapes with a 5-inch cookie cutter. ['cut']\n",
       "Place gingerbread men 1 inch apart on ungreased baking sheets. ['place']\n",
-      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake', 'begin']\n",
+      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake']\n",
       "Cool on baking sheets for 1 to 2 minutes. ['cool']\n",
       "Remove to wire racks to cool completely. ['remove']\n",
       "Decorate cooled cookies as desired. ['decorate']\n",
@@ -303,47 +349,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "meanwhile advmod beef NOUN []\n",
-      ", punct beef NOUN []\n",
-      "place compound beef NOUN []\n",
-      "ground compound beef NOUN []\n",
-      "beef ROOT beef NOUN [meanwhile, ,, place, ground, ,, garlic, in]\n",
-      ", punct beef NOUN []\n",
-      "garlic conj beef NOUN [,, oregano]\n",
-      ", punct garlic NOUN []\n",
-      "oregano conj garlic NOUN [,, powder]\n",
-      ", punct oregano NOUN []\n",
-      "garlic amod powder NOUN []\n",
-      "powder conj oregano NOUN [garlic, ,, salt]\n",
-      ", punct powder NOUN []\n",
-      "salt conj powder NOUN [,, and, pepper]\n",
-      ", punct salt NOUN []\n",
-      "and cc salt NOUN []\n",
-      "black amod pepper NOUN []\n",
-      "pepper conj salt NOUN [black]\n",
-      "in prep beef NOUN [skillet]\n",
-      "a det skillet NOUN []\n",
-      "large amod skillet NOUN []\n",
-      "skillet pobj in ADP [a, large, over]\n",
-      "over prep skillet NOUN [heat]\n",
-      "medium amod heat NOUN []\n",
-      "heat pobj over ADP [medium]\n",
+      "cook VERB ROOT cook VERB [and, stir, ,, minutes]\n",
+      "and CCONJ cc cook VERB []\n",
+      "stir VERB conj cook VERB [browned]\n",
+      "until SCONJ mark browned VERB []\n",
+      "beef NOUN nsubjpass browned VERB []\n",
+      "is AUX auxpass browned VERB []\n",
+      "browned VERB advcl stir VERB [until, beef, is]\n",
+      ", PUNCT punct cook VERB []\n",
+      "8 NUM quantmod 10 NUM []\n",
+      "to PART quantmod 10 NUM []\n",
+      "10 NUM nummod minutes NOUN [8, to]\n",
+      "minutes NOUN npadvmod cook VERB [10]\n",
       "\n",
-      "meanwhile, place ground beef beef ROOT beef\n",
-      "garlic garlic conj beef\n",
-      "oregano oregano conj garlic\n",
-      "garlic powder powder conj oregano\n",
-      "salt salt conj powder\n",
-      "black pepper pepper conj salt\n",
-      "a large skillet skillet pobj in\n",
-      "medium heat heat pobj over\n"
+      "beef beef nsubjpass browned\n",
+      "\n",
+      "8 to 10 minutes TIME\n"
      ]
     }
    ],
@@ -353,22 +381,26 @@
     "\n",
     "# text = \"lay eggplant slices on paper towels\"\n",
     "# text = \"sprinkle lightly with salt.\"\n",
-    "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
+    "text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
     "# text = \"stir in ground beef, onions, and garlic\"\n",
-    "text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
+    "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
     "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
     "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
     "# text = \"season béchamel sauce with salt and white pepper\"\n",
     "# text = \"serve hot and enjoy!\"\n",
+    "# text = \"bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes\"\n",
     "\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
-    "    print(token.text, token.dep_, token.head.text, token.head.pos_,\n",
+    "    print(token.text, token.pos_, token.dep_, token.head.text, token.head.pos_,\n",
     "            [child for child in token.children])\n",
     "print()\n",
     "for chunk in doc.noun_chunks:\n",
     "    print(chunk.text, chunk.root.text, chunk.root.dep_,\n",
-    "            chunk.root.head.text)"
+    "            chunk.root.head.text)\n",
+    "print()\n",
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
    ]
   }
  ],
