--- a/parser.ipynb
+++ b/parser.ipynb
@@ -33,7 +33,7 @@
      "text": [
       "Collecting en-core-web-md==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_md')\n"
      ]
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,20 +102,15 @@
     "class IngredientState:\n",
     "    '''Struct holding the current state of ingredients at a given step'''\n",
     "\n",
-    "    def __init__(self, remaining: list[Ingredient]):\n",
+    "    def __init__(self, remaining: list[Ingredient],\n",
+    "                 intermediate: list[IntermediateIngredient] = [],\n",
+    "                 focus: int = -1):\n",
     "        self.remaining: list[Ingredient] = remaining.copy()\n",
     "        '''Remaining unused ingredients'''\n",
-    "        self.intermediate: list[IntermediateIngredient] = []\n",
-    "        '''Any intermediate collections of ingredients'''\n",
-    "        self.focus = -1\n",
-    "        '''Index of currently referenced intermediate ingredient'''\n",
-    "    \n",
-    "    def __init__(self, remaining: list[Ingredient],\n",
-    "                 intermediate: list[IntermediateIngredient],\n",
-    "                 focus: int):\n",
-    "        self.remaining: list[Ingredient] = remaining.copy()\n",
     "        self.intermediate: list[IntermediateIngredient] = intermediate.copy()\n",
+    "        '''Any intermediate collections of ingredients'''\n",
     "        self.focus = focus\n",
+    "        '''Index of currently referenced intermediate ingredient'''\n",
     "\n",
     "class Step:\n",
     "    '''Struct holding step information'''\n",
@@ -144,6 +139,8 @@
     "        '''Title of the recipe'''\n",
     "        self.ingredients: list[Ingredient] = []\n",
     "        '''List of ingredients used in the recipe'''\n",
+    "        self.tools: list[str] = []\n",
+    "        '''List of tools used in the recipe'''\n",
     "        self.steps: list[Step] = []\n",
     "        '''List of recipe steps'''\n",
     "        self.other: dict[str, str] = {}\n",
@@ -152,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,14 +199,17 @@
     "                        step.methods.append(doc[j].text)\n",
     "                        break\n",
     "\n",
-    "            # Perform extraction\n",
-    "            dep = token.dep_\n",
-    "            match dep:\n",
-    "                case 'ROOT':\n",
+    "            # Extract methods\n",
+    "            if token.dep_ == 'ROOT':\n",
+    "                step.methods.append(token.text)\n",
+    "            elif token.dep_ == 'conj':\n",
+    "                if token.head.text in step.methods:\n",
     "                    step.methods.append(token.text)\n",
-    "                case 'conj':\n",
-    "                    if token.head.text in step.methods:\n",
-    "                        step.methods.append(token.text)\n",
+    "\n",
+    "        # Extract times\n",
+    "        for ent in doc.ents:\n",
+    "            if ent.label_ == 'TIME' or ent.label_ == 'DATE':\n",
+    "                step.times.append(ent.text)\n",
     "\n",
     "        # Save step to recipe\n",
     "        recipe.steps.append(step)"
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,23 +320,23 @@
      "text": [
       "Best Gingerbread Men Cookies \n",
       "\n",
-      "Mix flour, ginger, cinnamon, baking soda, nutmeg, and salt in large bowl. ['mix']\n",
-      "Beat butter and brown sugar in large bowl with electric mixer on medium speed until light and fluffy. ['beat']\n",
-      "Add molasses, egg, and vanilla. ['add']\n",
-      "Mix well. ['mix']\n",
-      "Gradually beat in flour mixture on low speed until well mixed. ['beat']\n",
-      "Press dough into a thick, flat disk. ['press']\n",
-      "Wrap in plastic wrap. ['wrap']\n",
-      "Refrigerate 4 hours or overnight. ['refrigerate']\n",
-      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat']\n",
-      "Roll dough on a lightly floured surface to a thickness of 1/4 inch. ['roll']\n",
-      "Cut into gingerbread men shapes with a 5-inch cookie cutter. ['cut']\n",
-      "Place gingerbread men 1 inch apart on ungreased baking sheets. ['place']\n",
-      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake']\n",
-      "Cool on baking sheets for 1 to 2 minutes. ['cool']\n",
-      "Remove to wire racks to cool completely. ['remove']\n",
-      "Decorate cooled cookies as desired. ['decorate']\n",
-      "Store cookies in airtight container up to 5 days. ['store']\n"
+      "Mix flour, ginger, cinnamon, baking soda, nutmeg, and salt in large bowl. ['mix'] []\n",
+      "Beat butter and brown sugar in large bowl with electric mixer on medium speed until light and fluffy. ['beat'] []\n",
+      "Add molasses, egg, and vanilla. ['add'] []\n",
+      "Mix well. ['mix'] []\n",
+      "Gradually beat in flour mixture on low speed until well mixed. ['beat'] []\n",
+      "Press dough into a thick, flat disk. ['press'] []\n",
+      "Wrap in plastic wrap. ['wrap'] []\n",
+      "Refrigerate 4 hours or overnight. ['refrigerate'] ['4 hours']\n",
+      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] []\n",
+      "Roll dough on a lightly floured surface to a thickness of 1/4 inch. ['roll'] []\n",
+      "Cut into gingerbread men shapes with a 5-inch cookie cutter. ['cut'] []\n",
+      "Place gingerbread men 1 inch apart on ungreased baking sheets. ['place'] []\n",
+      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake'] ['8 to 10 minutes']\n",
+      "Cool on baking sheets for 1 to 2 minutes. ['cool'] ['1 to 2 minutes']\n",
+      "Remove to wire racks to cool completely. ['remove'] []\n",
+      "Decorate cooled cookies as desired. ['decorate'] []\n",
+      "Store cookies in airtight container up to 5 days. ['store'] ['up to 5 days']\n"
      ]
     }
    ],
@@ -344,34 +344,37 @@
     "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
     "print(recipe.title, '\\n')\n",
     "for step in recipe.steps:\n",
-    "    print(step.text, step.methods)"
+    "    print(step.text, step.methods, step.times)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cook VERB ROOT cook VERB [and, stir, ,, minutes]\n",
-      "and CCONJ cc cook VERB []\n",
-      "stir VERB conj cook VERB [browned]\n",
-      "until SCONJ mark browned VERB []\n",
-      "beef NOUN nsubjpass browned VERB []\n",
-      "is AUX auxpass browned VERB []\n",
-      "browned VERB advcl stir VERB [until, beef, is]\n",
-      ", PUNCT punct cook VERB []\n",
-      "8 NUM quantmod 10 NUM []\n",
-      "to PART quantmod 10 NUM []\n",
-      "10 NUM nummod minutes NOUN [8, to]\n",
-      "minutes NOUN npadvmod cook VERB [10]\n",
+      "preheat VERB ROOT preheat VERB [oven, to, )] \n",
+      "the DET det oven NOUN [] \n",
+      "oven NOUN dobj preheat VERB [the] \n",
+      "to ADP prep preheat VERB [F] \n",
+      "350 NUM nummod degrees NOUN [] QUANTITY\n",
+      "degrees NOUN compound F PROPN [350] QUANTITY\n",
+      "F PROPN pobj to ADP [degrees, C] \n",
+      "( PUNCT punct degrees NOUN [] \n",
+      "175 NUM nummod degrees NOUN [] QUANTITY\n",
+      "degrees NOUN compound C PROPN [(, 175] QUANTITY\n",
+      "C PROPN appos F PROPN [degrees] \n",
+      ") PUNCT punct preheat VERB [] \n",
       "\n",
-      "beef beef nsubjpass browned\n",
+      "the oven oven dobj preheat\n",
+      "350 degrees F F pobj to\n",
+      "(175 degrees C C appos F\n",
       "\n",
-      "8 to 10 minutes TIME\n"
+      "350 degrees QUANTITY\n",
+      "175 degrees QUANTITY\n"
      ]
     }
    ],
@@ -381,19 +384,20 @@
     "\n",
     "# text = \"lay eggplant slices on paper towels\"\n",
     "# text = \"sprinkle lightly with salt.\"\n",
-    "text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
+    "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
     "# text = \"stir in ground beef, onions, and garlic\"\n",
     "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
     "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
-    "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
+    "text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
     "# text = \"season béchamel sauce with salt and white pepper\"\n",
     "# text = \"serve hot and enjoy!\"\n",
     "# text = \"bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes\"\n",
+    "# text = \"store cookies in airtight container up to 5 days\"\n",
     "\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
     "    print(token.text, token.pos_, token.dep_, token.head.text, token.head.pos_,\n",
-    "            [child for child in token.children])\n",
+    "            [child for child in token.children], token.ent_type_)\n",
     "print()\n",
     "for chunk in doc.noun_chunks:\n",
     "    print(chunk.text, chunk.root.text, chunk.root.dep_,\n",
@@ -401,6 +405,26 @@
     "print()\n",
     "for ent in doc.ents:\n",
     "    print(ent.text, ent.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'marker'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spacy.explain('SCONJ')"
    ]
   }
  ],
