Add basic ingredient extraction
This currently assumes that if an ingredient is mentioned in a step, then all of it is being used.

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -33,7 +33,7 @@
      "text": [
       "Collecting en-core-web-md==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_md')\n"
      ]
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_ingredient(name: str, ingredients: list[Ingredient]) -> list[int]:\n",
+    "    '''Finds the list of indices of the ingredients possibly being referenced'''\n",
+    "\n",
+    "    ingr_inds = []\n",
+    "    components = name.split()\n",
+    "\n",
+    "    # Remove any determiners\n",
+    "    if components[0] in ['the', 'a', 'an']:\n",
+    "        del components[0]\n",
+    "        name = ' '.join(components)\n",
+    "\n",
+    "    # If name is empty, return\n",
+    "    if not name:\n",
+    "        return ingr_inds\n",
+    "    \n",
+    "    # Initialize confidence to 1/2 of number of words\n",
+    "    max_confidence = len(components) / 2\n",
+    "\n",
+    "    for i in range(len(ingredients)):\n",
+    "        if name == ingredients[i].name:\n",
+    "            # Return if an exact match\n",
+    "            return [i]\n",
+    "        elif name in ingredients[i].name:\n",
+    "            # If a substring, add to list and limit search to other substrs\n",
+    "            ingr_inds.append(i)\n",
+    "            max_confidence = len(components) + 1\n",
+    "        elif max_confidence <= len(components):\n",
+    "            # Check how many words match and add to list if == current max or\n",
+    "            # reset list to just it + update max if >\n",
+    "            confidence = 0\n",
+    "            for wd in components:\n",
+    "                if wd in ingredients[i].name:\n",
+    "                    confidence += 1\n",
+    "            if confidence > max_confidence:\n",
+    "                ingr_inds = [i]\n",
+    "            elif confidence == max_confidence:\n",
+    "                ingr_inds.append(i)\n",
+    "    \n",
+    "    return ingr_inds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +235,7 @@
     "        doc = nlp(text)\n",
     "        for (i, token) in enumerate(doc):\n",
     "\n",
-    "            # If the parser didn't interpret this as an imperative sentence,\n",
+    "            # If the parser interpreted an imperative sentence as an NP,\n",
     "            # correct it.\n",
     "            if token.dep_ == 'ROOT' and token.head.pos_ == 'NOUN':\n",
     "                for j in range(i,-1,-1):\n",
@@ -206,6 +253,34 @@
     "                if token.head.text in step.methods:\n",
     "                    step.methods.append(token.text)\n",
     "\n",
+    "        # Extract ingredients\n",
+    "        for chunk in doc.noun_chunks:\n",
+    "\n",
+    "            # If the root verb is mistakenly in the chunk, remove it.\n",
+    "            name = chunk.text\n",
+    "            if chunk.root.dep_ == 'ROOT' and step.methods[0] in name:\n",
+    "                name = name.partition(chunk.root.text)[2]\n",
+    "                if not name:\n",
+    "                    continue\n",
+    "                name = name[1:-1]\n",
+    "            \n",
+    "            # If the noun chunk is not a dobj, pobj, or conj, ignore it.\n",
+    "            if chunk.root.dep_ not in ['dobj', 'pobj', 'conj']:\n",
+    "                continue\n",
+    "\n",
+    "            # Check if the referenced noun is an ingredient.\n",
+    "            ingr_inds = find_ingredient(name, step.state.remaining)\n",
+    "            if ingr_inds:\n",
+    "                # Assume ambiguous ingredient means inclusive\n",
+    "                offset = 0\n",
+    "                for i in ingr_inds:\n",
+    "                    ingr = Ingredient(step.state.remaining[i-offset].name,\n",
+    "                                      step.state.remaining[i-offset].quantity,\n",
+    "                                      step.state.remaining[i-offset].unit)\n",
+    "                    del step.state.remaining[i-offset]\n",
+    "                    offset += 1\n",
+    "                    step.ingredients.append(ingr)\n",
+    "\n",
     "        # Extract times\n",
     "        for ent in doc.ents:\n",
     "            if ent.label_ == 'TIME' or ent.label_ == 'DATE':\n",
@@ -217,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,70 +386,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Gingerbread Men Cookies \n",
+      "Moussaka \n",
       "\n",
-      "Mix flour, ginger, cinnamon, baking soda, nutmeg, and salt in large bowl. ['mix'] []\n",
-      "Beat butter and brown sugar in large bowl with electric mixer on medium speed until light and fluffy. ['beat'] []\n",
-      "Add molasses, egg, and vanilla. ['add'] []\n",
-      "Mix well. ['mix'] []\n",
-      "Gradually beat in flour mixture on low speed until well mixed. ['beat'] []\n",
-      "Press dough into a thick, flat disk. ['press'] []\n",
-      "Wrap in plastic wrap. ['wrap'] []\n",
-      "Refrigerate 4 hours or overnight. ['refrigerate'] ['4 hours']\n",
-      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] []\n",
-      "Roll dough on a lightly floured surface to a thickness of 1/4 inch. ['roll'] []\n",
-      "Cut into gingerbread men shapes with a 5-inch cookie cutter. ['cut'] []\n",
-      "Place gingerbread men 1 inch apart on ungreased baking sheets. ['place'] []\n",
-      "Bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes. ['bake'] ['8 to 10 minutes']\n",
-      "Cool on baking sheets for 1 to 2 minutes. ['cool'] ['1 to 2 minutes']\n",
-      "Remove to wire racks to cool completely. ['remove'] []\n",
-      "Decorate cooled cookies as desired. ['decorate'] []\n",
-      "Store cookies in airtight container up to 5 days. ['store'] ['up to 5 days']\n"
+      "3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
+      "salt to taste\n",
+      "1/4 cup olive oil\n",
+      "1 tablespoon butter\n",
+      "1 pound lean ground beef\n",
+      "2 onions, chopped\n",
+      "1 clove garlic, minced\n",
+      "ground black pepper to taste\n",
+      "2 tablespoons dried parsley\n",
+      "1/2 teaspoon fines herbs\n",
+      "1/4 teaspoon ground cinnamon\n",
+      "1/2 teaspoon ground nutmeg, divided\n",
+      "1 (8 ounce) can tomato sauce\n",
+      "1/2 cup red wine\n",
+      "1 egg, beaten\n",
+      "4 cups milk\n",
+      "1/2 cup butter\n",
+      "6 tablespoons all-purpose flour\n",
+      "ground white pepper, to taste\n",
+      "3/2 cups freshly grated Parmesan cheese\n",
+      "\n",
+      "Lay eggplant slices on paper towels. ['lay'] ['eggplants, peeled and cut lengthwise into 1/2 inch thick slices'] []\n",
+      "Sprinkle lightly with salt. ['sprinkle'] ['salt to taste'] []\n",
+      "Let sit for 30 minutes to draw out moisture. ['sit'] [] ['30 minutes']\n",
+      "Pat dry with paper towels. ['dry'] [] []\n",
+      "Warm olive oil in a skillet over high heat. ['warm'] ['olive oil'] []\n",
+      "Fry eggplant until browned, 2 to 3 minutes per side. ['fry'] [] ['2 to 3 minutes']\n",
+      "Drain on paper towels. ['drain'] [] []\n",
+      "Set aside. ['set'] [] []\n",
+      "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt'] [] []\n",
+      "Stir in ground beef, onions, and garlic. ['stir'] ['lean ground beef'] []\n",
+      "Season with salt and black pepper. ['season'] [] []\n",
+      "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir'] [] ['8 to 10 minutes']\n",
+      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add'] ['dried parsley', 'fines herbs'] []\n",
+      "Pour in tomato sauce and wine. ['pour'] ['tomato sauce'] []\n",
+      "Mix well. ['mix'] [] []\n",
+      "Simmer for 20 minutes. ['simmer'] [] ['20 minutes']\n",
+      "Allow to cool. ['allow'] [] []\n",
+      "Stir in beaten egg. ['stir'] ['egg, beaten'] []\n",
+      "Scald milk in a saucepan over medium heat. ['scald'] [] []\n",
+      "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt'] [] []\n",
+      "Whisk flour into butter until smooth. ['whisk'] ['butter'] []\n",
+      "Lower heat. ['lower'] [] []\n",
+      "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour'] ['milk'] []\n",
+      "Season béchamel sauce with salt and white pepper. ['season'] [] ['season']\n",
+      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] [] []\n",
+      "Grease a 9x13-inch baking dish. ['grease'] [] []\n",
+      "Arrange a single layer of eggplant in the prepared baking dish. ['arrange'] [] []\n",
+      "Cover eggplant with meat sauce. ['cover'] [] []\n",
+      "Sprinkle 1/2 cup Parmesan cheese on top. ['sprinkle'] ['freshly grated Parmesan cheese'] []\n",
+      "Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top. ['cover', 'sprinkle'] [] []\n",
+      "Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. ['pour', 'sprinkle'] [] []\n",
+      "Cover with remaining cheese. ['cover'] [] []\n",
+      "Bake in the preheated oven until bubbly and browned, about 1 hour. ['bake', 'browned'] [] ['about 1 hour']\n",
+      "Serve hot and enjoy!. ['serve'] [] []\n"
      ]
     }
    ],
    "source": [
-    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
+    "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
+    "# recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
+    "# recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/230238/gingerbread-men-cookies/\")\n",
     "print(recipe.title, '\\n')\n",
+    "for ingr in recipe.ingredients:\n",
+    "    print(ingr.quantity if ingr.quantity else '', ' ' if ingr.quantity else '',\n",
+    "          ingr.unit if ingr.unit else '', ' ' if ingr.unit else '',\n",
+    "          ingr.name, sep='')\n",
+    "print()\n",
     "for step in recipe.steps:\n",
-    "    print(step.text, step.methods, step.times)"
+    "    print(step.text, step.methods, [ingr.name for ingr in step.ingredients],\n",
+    "          step.times)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "preheat VERB ROOT preheat VERB [oven, to, )] \n",
-      "the DET det oven NOUN [] \n",
-      "oven NOUN dobj preheat VERB [the] \n",
-      "to ADP prep preheat VERB [F] \n",
-      "350 NUM nummod degrees NOUN [] QUANTITY\n",
-      "degrees NOUN compound F PROPN [350] QUANTITY\n",
-      "F PROPN pobj to ADP [degrees, C] \n",
-      "( PUNCT punct degrees NOUN [] \n",
-      "175 NUM nummod degrees NOUN [] QUANTITY\n",
-      "degrees NOUN compound C PROPN [(, 175] QUANTITY\n",
-      "C PROPN appos F PROPN [degrees] \n",
-      ") PUNCT punct preheat VERB [] \n",
+      "add VERB ROOT add VERB [parsley, herbs] \n",
+      "parsley NOUN dobj add VERB [,] \n",
+      ", PUNCT punct parsley NOUN [] \n",
+      "fines NOUN compound herbs NOUN [] \n",
+      "herbs NOUN dobj add VERB [fines, ,, cinnamon] \n",
+      ", PUNCT punct herbs NOUN [] \n",
+      "cinnamon NOUN conj herbs NOUN [,, and, nutmeg] \n",
+      ", PUNCT punct cinnamon NOUN [] \n",
+      "and CCONJ cc cinnamon NOUN [] \n",
+      "1/4 NUM nummod nutmeg NOUN [] CARDINAL\n",
+      "teaspoon NOUN compound nutmeg NOUN [] \n",
+      "nutmeg NOUN conj cinnamon NOUN [1/4, teaspoon] \n",
       "\n",
-      "the oven oven dobj preheat\n",
-      "350 degrees F F pobj to\n",
-      "(175 degrees C C appos F\n",
+      "parsley parsley dobj add\n",
+      "fines herbs herbs dobj add\n",
+      "cinnamon cinnamon conj herbs\n",
+      "1/4 teaspoon nutmeg nutmeg conj cinnamon\n",
       "\n",
-      "350 degrees QUANTITY\n",
-      "175 degrees QUANTITY\n"
+      "1/4 CARDINAL\n"
      ]
     }
    ],
@@ -388,11 +509,12 @@
     "# text = \"stir in ground beef, onions, and garlic\"\n",
     "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
     "# text = \"add lasagna noodles and cook for 10 minutes or until al dente\"\n",
-    "text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
+    "# text = \"preheat the oven to 350 degrees F (175 degrees C)\"\n",
     "# text = \"season béchamel sauce with salt and white pepper\"\n",
     "# text = \"serve hot and enjoy!\"\n",
     "# text = \"bake in the preheated oven until edges of cookies are set and just begin to brown, 8 to 10 minutes\"\n",
-    "# text = \"store cookies in airtight container up to 5 days\"\n",
+    "# text = \"pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg\"\n",
+    "text = \"add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg\"\n",
     "\n",
     "doc = nlp(text)\n",
     "for token in doc:\n",
@@ -405,26 +527,6 @@
     "print()\n",
     "for ent in doc.ents:\n",
     "    print(ent.text, ent.label_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'marker'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spacy.explain('SCONJ')"
    ]
   }
  ],
