Showcase basic ingredient extraction
Updates example recipe parsing to have used the basic ingredient extraction.

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -425,11 +425,11 @@
       "Drain on paper towels. ['drain'] [] []\n",
       "Set aside. ['set'] [] []\n",
       "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt'] [] []\n",
-      "Stir in ground beef, onions, and garlic. ['stir'] ['lean ground beef'] []\n",
-      "Season with salt and black pepper. ['season'] [] []\n",
+      "Stir in ground beef, onions, and garlic. ['stir'] ['lean ground beef', 'onions, chopped', 'garlic, minced'] []\n",
+      "Season with salt and black pepper. ['season'] ['ground black pepper to taste'] []\n",
       "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir'] [] ['8 to 10 minutes']\n",
-      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add'] ['dried parsley', 'fines herbs'] []\n",
-      "Pour in tomato sauce and wine. ['pour'] ['tomato sauce'] []\n",
+      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add'] ['dried parsley', 'fines herbs', 'ground cinnamon'] []\n",
+      "Pour in tomato sauce and wine. ['pour'] ['tomato sauce', 'red wine'] []\n",
       "Mix well. ['mix'] [] []\n",
       "Simmer for 20 minutes. ['simmer'] [] ['20 minutes']\n",
       "Allow to cool. ['allow'] [] []\n",
@@ -439,7 +439,7 @@
       "Whisk flour into butter until smooth. ['whisk'] ['butter'] []\n",
       "Lower heat. ['lower'] [] []\n",
       "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour'] ['milk'] []\n",
-      "Season béchamel sauce with salt and white pepper. ['season'] [] ['season']\n",
+      "Season béchamel sauce with salt and white pepper. ['season'] ['ground white pepper, to taste'] ['season']\n",
       "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] [] []\n",
       "Grease a 9x13-inch baking dish. ['grease'] [] []\n",
       "Arrange a single layer of eggplant in the prepared baking dish. ['arrange'] [] []\n",
