displaying ingredients and steps

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (2.32.3)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages (from requests) (2024.8.30)\n",
+      "Requirement already satisfied: requests in c:\\users\\18723\\anaconda3\\lib\\site-packages (2.29.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\18723\\anaconda3\\lib\\site-packages (from requests) (2024.8.30)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -24,18 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Collecting en-core-web-md==3.8.0\n",
-      "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl (33.5 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m33.5/33.5 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
-      "You can now load the package via spacy.load('en_core_web_md')\n"
+      "C:\\Users\\18723\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe: No module named spacy\n"
      ]
     }
    ],
@@ -45,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,73 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moussaka \n",
-      "\n",
-      "3 eggplants, peeled and cut lengthwise into 1/2 inch thick slices\n",
-      "salt to taste\n",
-      "1/4 cup olive oil\n",
-      "1 tablespoon butter\n",
-      "1 pound lean ground beef\n",
-      "2 onions, chopped\n",
-      "1 clove garlic, minced\n",
-      "ground black pepper to taste\n",
-      "2 tablespoons dried parsley\n",
-      "1/2 teaspoon fines herbs\n",
-      "1/4 teaspoon ground cinnamon\n",
-      "1/2 teaspoon ground nutmeg, divided\n",
-      "1 (8 ounce) can tomato sauce\n",
-      "1/2 cup red wine\n",
-      "1 egg, beaten\n",
-      "4 cups milk\n",
-      "1/2 cup butter\n",
-      "6 tablespoons all-purpose flour\n",
-      "ground white pepper, to taste\n",
-      "3/2 cups freshly grated Parmesan cheese\n",
-      "\n",
-      "Lay eggplant slices on paper towels. ['lay'] ['eggplants, peeled and cut lengthwise into 1/2 inch thick slices'] []\n",
-      "Sprinkle lightly with salt. ['sprinkle'] ['salt to taste'] []\n",
-      "Let sit for 30 minutes to draw out moisture. ['sit'] [] ['30 minutes']\n",
-      "Pat dry with paper towels. ['dry'] [] []\n",
-      "Warm olive oil in a skillet over high heat. ['warm'] ['olive oil'] []\n",
-      "Fry eggplant until browned, 2 to 3 minutes per side. ['fry'] [] ['2 to 3 minutes']\n",
-      "Drain on paper towels. ['drain'] [] []\n",
-      "Set aside. ['set'] [] []\n",
-      "Melt 1 tablespoon butter in a large skillet over medium heat. ['melt'] [] []\n",
-      "Stir in ground beef, onions, and garlic. ['stir'] ['lean ground beef', 'onions, chopped', 'garlic, minced'] []\n",
-      "Season with salt and black pepper. ['season'] ['ground black pepper to taste'] []\n",
-      "Cook and stir until beef is browned, 8 to 10 minutes. ['cook', 'stir'] [] ['8 to 10 minutes']\n",
-      "Add parsley, fines herbs, cinnamon, and 1/4 teaspoon nutmeg. ['add'] ['dried parsley', 'fines herbs', 'ground cinnamon'] []\n",
-      "Pour in tomato sauce and wine. ['pour'] ['tomato sauce', 'red wine'] []\n",
-      "Mix well. ['mix'] [] []\n",
-      "Simmer for 20 minutes. ['simmer'] [] ['20 minutes']\n",
-      "Allow to cool. ['allow'] [] []\n",
-      "Stir in beaten egg. ['stir'] ['egg, beaten'] []\n",
-      "Scald milk in a saucepan over medium heat. ['scald'] [] []\n",
-      "At the same time, melt 1/2 cup butter in a large skillet over medium heat. ['melt'] [] []\n",
-      "Whisk flour into butter until smooth. ['whisk'] ['butter'] []\n",
-      "Lower heat. ['lower'] [] []\n",
-      "Gradually pour in scalded milk, whisking constantly until it thickens. ['pour'] ['milk'] []\n",
-      "Season béchamel sauce with salt and white pepper. ['season'] ['ground white pepper, to taste'] ['season']\n",
-      "Preheat the oven to 350 degrees F (175 degrees C). ['preheat'] [] []\n",
-      "Grease a 9x13-inch baking dish. ['grease'] [] []\n",
-      "Arrange a single layer of eggplant in the prepared baking dish. ['arrange'] [] []\n",
-      "Cover eggplant with meat sauce. ['cover'] [] []\n",
-      "Sprinkle 1/2 cup Parmesan cheese on top. ['sprinkle'] ['freshly grated Parmesan cheese'] []\n",
-      "Cover with remaining eggplant and sprinkle another 1/2 cup cheese on top. ['cover', 'sprinkle'] [] []\n",
-      "Pour béchamel sauce on top and sprinkle with remaining 1/4 teaspoon nutmeg. ['pour', 'sprinkle'] [] []\n",
-      "Cover with remaining cheese. ['cover'] [] []\n",
-      "Bake in the preheated oven until bubbly and browned, about 1 hour. ['bake', 'browned'] [] ['about 1 hour']\n",
-      "Serve hot and enjoy!. ['serve'] [] []\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
     "# recipe = get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
@@ -470,35 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "add VERB ROOT add VERB [parsley, herbs] \n",
-      "parsley NOUN dobj add VERB [,] \n",
-      ", PUNCT punct parsley NOUN [] \n",
-      "fines NOUN compound herbs NOUN [] \n",
-      "herbs NOUN dobj add VERB [fines, ,, cinnamon] \n",
-      ", PUNCT punct herbs NOUN [] \n",
-      "cinnamon NOUN conj herbs NOUN [,, and, nutmeg] \n",
-      ", PUNCT punct cinnamon NOUN [] \n",
-      "and CCONJ cc cinnamon NOUN [] \n",
-      "1/4 NUM nummod nutmeg NOUN [] CARDINAL\n",
-      "teaspoon NOUN compound nutmeg NOUN [] \n",
-      "nutmeg NOUN conj cinnamon NOUN [1/4, teaspoon] \n",
-      "\n",
-      "parsley parsley dobj add\n",
-      "fines herbs herbs dobj add\n",
-      "cinnamon cinnamon conj herbs\n",
-      "1/4 teaspoon nutmeg nutmeg conj cinnamon\n",
-      "\n",
-      "1/4 CARDINAL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
@@ -546,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
